# C-snake

./: .clang-format  .gitignore  CMakeLists.txt  main.c  random.h  run.sh
